--- a/module-1/Task-1.4.1.html
+++ b/module-1/Task-1.4.1.html
@@ -1,9 +1,3 @@
-Module / Session - date
+<h1>1.4 - 15/10/20</h1>
 
-1.3 - 13/10/20
-
-Reflection
-
-In today's session we were introduced to GIT/Github. We were shown a quick demo on the advantages of using VSCode. We installed an extension on to VSCode. We have done an introductory demonstration of how to commit changes in files to a repo that we cloned onto our machine. 
-
-10 years ago I used to use Notepad++ and this is much better. 
+<p>In today's session we were introduced to more information about Github, including branches which was very handy.</p>
