--- a/module-2/task-2.1.3.html
+++ b/module-2/task-2.1.3.html
@@ -13,6 +13,18 @@
     <h2>Secondary title</h2>
     <p><a href="/module-2/task-2.1.2.html" target="blank" title="a relative link to a file"> Here is a relative link</a> Aenean rutrum sem vel sollicitudin venenatis. Nunc tristique congue erat, ac tempus erat cursus in. Morbi ut urna volutpat, <em>laoreet magna et, mollis orci</em>. Donec ut ligula varius, laoreet metus vel, faucibus diam. Integer facilisis porttitor massa, ac porta lectus laoreet non. Aliquam gravida libero a enim aliquam, eget auctor leo euismod. Sed malesuada commodo lectus ut ultrices. Quisque laoreet ante vitae nibh tempor consectetur. Nulla eu placerat erat.</p>
 
+    <ul>
+        <li>first thing</li>
+        <li>second thing</li>
+        <li>Third thing</li>
+    </ul>
+
+    <ol>
+        <li>Next first thing</li>
+        <li>Next second thing</li>
+        <li>Next third thing</li>
+    </ol>
+
     <h3>Third title</h3>
     <img src="https://images.pexels.com/photos/572861/pexels-photo-572861.jpeg">
     <p>ullam vehicula, leo feugiat lobortis commodo, quam augue hendrerit dui, non porttitor urna dui fringilla dui. Vestibulum non hendrerit turpis, vitae laoreet sapien. Sed in ullamcorper odio. Maecenas efficitur porta orci. Curabitur vel posuere mi. Sed leo turpis, commodo eu est id, varius lobortis tellus. Aliquam scelerisque nisl id magna lobortis rutrum. Mauris commodo a felis ac pulvinar. Nulla lobortis arcu eget semper semper. Sed vitae volutpat libero. Duis at nisi in lectus sollicitudin varius eu id purus.</p>
