Another table row

--- a/module-2/task-2.1.4.html
+++ b/module-2/task-2.1.4.html
@@ -38,6 +38,12 @@
             <td>81</td>
         </tr>
 
+        <tr>
+            <td>William</td>
+            <td>Bithers</td>
+            <td>51</td>
+        </tr>
+
     </tbody>
 </table>
 
