--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Modules</h1>
     <h2>Module 3 and 4</h2>
-    <p>I have learned about html, with the most common tags such as images, hyperlinks, ordered and unordered lists and document setup.</p>
+       <p>I have learned about html, with the most common tags such as images, hyperlinks, ordered and unordered lists and document setup.</p>
+
+    <h2>Add quiz score here</h2>
+        <p>Specifically here</p>
 </body>
 </html>
