--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Modules</h1>
     <h2>Module 3 and 4</h2>
        <p>I have learned about html, with the most common tags such as images, hyperlinks, ordered and unordered lists and document setup.</p>
+       <p>I've played with CSS, adding styles to a html file using a relative link to a styelsheet.</p>
 
     <h2>Add quiz score here</h2>
         <p>Specifically here</p>
