--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
        <p>I have learned about html, with the most common tags such as images, hyperlinks, ordered and unordered lists and document setup.</p>
        <p>I've played with CSS, adding styles to a html file using a relative link to a styelsheet.</p>
 
+    <h2>27 October</h2>
+
+       <p>in 2.2 and 2.3 we learned about specificity, classes and divs, and some fancy html 5 header and footer tags.</p>
+
     <h2>Add quiz score here</h2>
         <p>Specifically here</p>
 </body>
