Relative positioning fun

--- a/module-2/task-2.4.3.html
+++ b/module-2/task-2.4.3.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" type="text/css" href="../css/task-2.4.3.css" />
 </head>
 <body>
-    
+    <div class="relative"></div>
 </body>
 </html>
