Lots of commits for module 3

--- a/module-3/task-3.1.2.html
+++ b/module-3/task-3.1.2.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task 3.1.1</title>
+    <title>Task 3.1.2</title>
+  
 </head>
 <body>
-    <h1>My first JS program</h1>
+    
 
-    <script>
 
-        console.log('Hello world');
-        alert('Hello world');
 
-    </script>
+
+    <script src="../scripts/task-3.1.2.js"></script>
 </body>
 </html>
