Fixed divs in 3.4.1

--- a/module-3/task-3.4.1.html
+++ b/module-3/task-3.4.1.html
@@ -33,10 +33,10 @@ for( let counter = 1; counter <= 12; counter++ ) {
     }
 
 
-    document.write('<div>');
+    document.write('</div>');
 }
     
-// something is up with my divs
+
 
 
 
