added pics to 3.7.1

--- a/module-3/task-3.7.1.html
+++ b/module-3/task-3.7.1.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 3.7.1</title>
+
+    <style>img { width:500px; }</style>
 </head>
 <body>
 
@@ -14,6 +16,23 @@
     <button id="Lemur">Lemur</button>
     <button id="squirrel">Squirrel</button>
     <button id="clear">Clear filter</button>
+
+    <div class="dog"><img src="img/dog-1.png"></div>
+    <div class="dog"><img src="img/dog-2.png"></div>
+    <div class="dog"><img src="img/dog-3.png"></div>
+    <div class="dog"><img src="img/dog-4.png"></div>
+    <div class="cat"><img src="img/cat-1.png"></div>
+    <div class="cat"><img src="img/cat-2.png"></div>
+    <div class="cat"><img src="img/cat-3.png"></div>
+    <div class="cat"><img src="img/cat-4.png"></div>
+    <div class="lemur"><img src="img/lemur-1.png"></div>
+    <div class="lemur"><img src="img/lemur-2.png"></div>
+    <div class="lemur"><img src="img/lemur-3.png"></div>
+    <div class="lemur"><img src="img/lemur-4.png"></div>
+    <div class="squirrel"><img src="img/squirrel-1.png"></div>
+    <div class="squirrel"><img src="img/squirrel-2.png"></div>
+    <div class="squirrel"><img src="img/squirrel-3.png"></div>
+    <div class="squirrel"><img src="img/squirrel-4.png"></div>
     
 </body>
 </html>
