--- a/module-3/task-3.7.1.html
+++ b/module-3/task-3.7.1.html
@@ -17,22 +17,25 @@
     <button id="squirrel">Squirrel</button>
     <button id="clear">Clear filter</button>
 
-    <div class="dog"><img src="img/dog-1.png"></div>
-    <div class="dog"><img src="img/dog-2.png"></div>
-    <div class="dog"><img src="img/dog-3.png"></div>
-    <div class="dog"><img src="img/dog-4.png"></div>
-    <div class="cat"><img src="img/cat-1.png"></div>
-    <div class="cat"><img src="img/cat-2.png"></div>
-    <div class="cat"><img src="img/cat-3.png"></div>
-    <div class="cat"><img src="img/cat-4.png"></div>
-    <div class="lemur"><img src="img/lemur-1.png"></div>
-    <div class="lemur"><img src="img/lemur-2.png"></div>
-    <div class="lemur"><img src="img/lemur-3.png"></div>
-    <div class="lemur"><img src="img/lemur-4.png"></div>
-    <div class="squirrel"><img src="img/squirrel-1.png"></div>
-    <div class="squirrel"><img src="img/squirrel-2.png"></div>
-    <div class="squirrel"><img src="img/squirrel-3.png"></div>
-    <div class="squirrel"><img src="img/squirrel-4.png"></div>
+    <div class="dog"><caption>Dog 1</caption><img src="img/dog-1.png"> </div>
+    <div class="dog"><caption>Dog 2</caption><img src="img/dog-2.png"></div>
+    <div class="dog"><caption>Dog 3</caption><img src="img/dog-3.png"></div>
+    <div class="dog"><caption>Dog 4</caption><img src="img/dog-4.png"></div>
+
+    <div class="cat"><caption>Cat 1</caption><img src="img/cat-1.png"></div>
+    <div class="cat"><caption>Cat 2</caption><img src="img/cat-2.png"></div>
+    <div class="cat"><caption>Cat 3</caption><img src="img/cat-3.png"></div>
+    <div class="cat"><caption>Cat 4</caption><img src="img/cat-4.png"></div>
+
+    <div class="lemur"><caption>Lemur 1</caption><img src="img/lemur-1.png"></div>
+    <div class="lemur"><caption>Lemur 2</caption><img src="img/lemur-2.png"></div>
+    <div class="lemur"><caption>Lemur 3</caption><img src="img/lemur-3.png"></div>
+    <div class="lemur"><caption>Lemur 4</caption><img src="img/lemur-4.png"></div>
+
+    <div class="squirrel"><caption>Squirrel 1</caption><img src="img/squirrel-1.png"></div>
+    <div class="squirrel"><caption>Squirrel 2</caption><img src="img/squirrel-2.png"></div>
+    <div class="squirrel"><caption>Squirrel 3</caption><img src="img/squirrel-3.png"></div>
+    <div class="squirrel"><caption>Squirrel 4</caption><img src="img/squirrel-4.png"></div>
     
 </body>
 </html>
