Task 3.7.2 - the javascript begins

--- a/module-3/task-3.7.1.html
+++ b/module-3/task-3.7.1.html
@@ -36,6 +36,10 @@
     <div class="squirrel"><caption>Squirrel 2</caption><img src="img/squirrel-2.png"></div>
     <div class="squirrel"><caption>Squirrel 3</caption><img src="img/squirrel-3.png"></div>
     <div class="squirrel"><caption>Squirrel 4</caption><img src="img/squirrel-4.png"></div>
+
+
+
+    <script src="../scripts/task-3.7.1.js"></script>
     
 </body>
 </html>
