--- a/module-3/task-3.7.1.html
+++ b/module-3/task-3.7.1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <input type="text">Search</input>
+    <input id="queryBox" type="text">Search</input>
 
     <button id="cat">Cat</button>
     <button id="dog">Dog</button>
